<resources>
    <string name="app_name">Yummy-V2</string>
    <string name="title_home">홈</string>
    <string name="title_recommend">추천</string>
    <string name="Yummy">YUMMY</string>
    <string name="sub_title">대한민국 1등 음식점 추천 어플</string>
    <string name="snack_bar_message">앱을 실행하려면 위치 접근 권한이 필요합니다.</string>
    <string name="default_marker_title">위치정보 가져올 수 없음</string>
    <string name="default_marker_snippet">위치 권한과 GPS 활성 여부를 확인하세요.</string>
    <string name="dialog_title">위치 서비스 비활성화</string>
    <string name="dialog_message">앱을 사용하기 위해서는 위치 서비스가 필요합니다.\n위치 설정을 수정해주세요.</string>
    <string name="address_recommend_title">위치 주변 음식점 추천</string>
    <string name="address_hint">건물명, 도로명 또는 지번으로 검색</string>
    <string name="address_gps">현재 위치로 주소 설정</string>
    <string name="address_list_is_empty">최근에 사용한 주소가 없어요</string>
    <string name="place_picker_title">음식점 추천 주소 설정</string>
    <string name="place_picker_confirm">선택한 위치로 설정</string>
    <string name="search_marker_title">검색한 위치</string>
    <string name="recommend_title">오늘 메뉴는\n야미가 책임질게요</string>
    <string name="recommend_button">내 주변 음식점 추천 받기</string>
    <string name="recommend_list_hint">추천 받은 음식점이 없어요</string>
    <string name="recommend_select">오늘의 메뉴로 선택하기</string>
</resources>